tests/bad/var_invalid_type.oc
/// fail: Couldn't find this identifier: Foo

def main() {
    let x: Foo
}